tests/NormalTests/paczka1/small_fuzzy/16907924.err
Error in line 1: ioBQiEZx S661 26,2
Error in line 8: p7K8KID1 S832 59,29
Error in line 6: ioBQiEZx S661 3,2
Error in line 10: BUY9 S661 48,9
Error in line 16: PJ41Z S83I 15,6
